--- a/index.html
+++ b/index.html
@@ -30,105 +30,119 @@
           </picture>
         </section>
         <section class="main-text">
-          <h2 class="main-text-sedona">СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</h2>
+          <h2 class="main-text-sedona">СЕДОНА &ndash; НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</h2>
           <p>РАССМОТРИМ 5 ПРИЧИН, ПО КОТОРЫМ СЕДОНА КРУЧЕ, ЧЕМ ГРАНД КАНЬОН!</p>
         </section>
         <section class="main-realhouse">
+          <h2 class="visually-hidden">Седона настоящий живой городок</h2>
           <div class="realhouse-text">
             <h2 class="realhouse-sity">НАСТОЯЩИЙ ГОРОДОК</h2>
-            <p class="realhouse-n1">-№1-</p>
-            <p class="realhouse-Sedona">СЕДОНА - НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
+            <p class="realhouse-n1">&ndash; №1 &ndash;</p>
+            <p class="realhouse-Sedona">СЕДОНА &ndash; НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
           </div>
-        <div class="main-firstimage">
-          <picture>
-            <img src="img/firstimage.jpg" width="800" height="400" alt="Красивый вид в Седоне">
-          </picture>
-        </div>
-        </section>
-        <section class="main-house">
-          <h3>Жилье</h3>
-          <p>РЕКОМЕНДУЕМ ПОЖИТЬ В НАСТОЯЩЕМ МОТЕЛЕ, ВСЕ КАК В КИНО!</p>
-        </section>
-        <section class="main-food">
-          <h3>ЕДА</h3>
-          <p>ВСЕГДА ЗАКАЗЫВАЙТЕ ФИРМЕННЫЙ БУРГЕР, ВЫ НЕ РАЗОЧАРУЕТЕСЬ!</p>
-        </section>
-        <section class="main-souvenir">
-          <h3>СУВЕНИРЫ</h3>
-          <p>НЕ ТОЛЬКО КИТАЙСКОГО, НО И МЕСТНОГО ПРОИЗВОДСТВА!</p>
-        </section>
-        <div>
-          <picture class="main-secondimage">
-            <img src="img/secondimage.jpg" width="800" height="256" alt="Каньон в Седоне">
-          </picture>
-        </div>
-        <section class="main-bridge">
-          <h3 class="bridge-devil">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h3>
-          <p class="bridge-#2">-№2-</p>
-          <p class="bridge-go">ДА, ПО НЕМУ МОЖНО ПРОЙТИ! ЕСЛИ ВЫ ОСМЕЛИТЕСЬ</p>
-        </section>
-        <section class="main-area">
-          <h3>НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
-          <p>-№3-</p>
-          <p>ВСЕ ДОСТОПРИМЕЧАТЕЛЬНОСТИ НАХОДЯТСЯ ОЧЕНЬ БЛИЗКО</p>
-        </section>
-        <section class="main-route">
-          <h3>КРАСИВАЯ ДОРОГА</h3>
-          <p>-№4-</p>
-          <p>ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА СОВСЕМ НЕ СКУЧНО!</p>
-        </section>
-        <section class="main-tourist">
-          <h3>МАЛО ТУРИСТОВ</h3>
-          <p>-№5-</p>
-          <p>БОЛЬШИНСТВО ЕДЕТ В ГРАНД КАНЬОН И ТОЛПИТСЯ ТАМ</p>
-        </section>
-        <section class="search">
-          <h2 class="search-title">ЗАИНТЕРЕСОВАЛИСЬ?</h2>
-          <p class="search-text">УКАЖИТЕ ПРЕДПОЛАГАЕМЫЕ ДАТЫ ПОЕЗДКИ, И МЫ ПОКАЖЕМ ВАМ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ ГОСТИНИЦ В СЕДОНЕ</P>
-            <form action="#" method="get" class="search-finder">
-              <h2 class="search-Sedona">Поиск гостиницы в Седоне</h2>
-            <div class="search-data">
-              <p>
-                <label for="checking">Дата заезда:</label>
-                <span class="input-checking">
-                  <input type="text" id="checking" class="date-input" value="24 апреля 2017">
-                  <label for="checking" class="search-calendar">Дата заезда</label>
-                </span>
-              </p>
-              <p  class="appointment-item">
-                <label for="checkout">Дата выезда:</label>
-                <span class="input-checkout">
-                  <input type="text" id="checkout" class="date-input" value="4 июля 2017">
-                  <label for="checkout" class="search-calendar">Дата выезда</label>
-                </span>
-              </p>
-
-              <p class="adults">
-                <label for="adults">Взрослые:</label>
-                <span class="adults-number">
-                  <a class="adult-reduce" href="#">Less</a>
-                  <input class="people-number" id="adults" type="text" value="2">
-                  <a class="adult-add" href="#">More</a>
-                </span>
-              </p>
-              <p class="children">
-                <label for="children">Дети:</label>
-                <span class="children-number">
-                  <a class="children-reduce" href="#">Less</a>
-                  <input class="people-number" id="children" type="text" value="0">
-                  <a class="children-add" href="#">More</a>
-                </span>
-              </p>
-
-              <input class="button-form" type="submit" value="Найти">
-            </div>
-          </form>
-          <div class="map">
-            <picture class="map-image">
-              <img src="img/map.jpg" width="1200" height="756" alt="Карта окрестностей Седоны">
+          <div class="main-firstimage">
+            <picture>
+              <img src="img/firstimage.jpg" width="800" height="400" alt="Красивый вид в Седоне">
             </picture>
           </div>
         </section>
+        <div class="main-offer">
+          <section class="offer-house">
+            <h3>Жилье</h3>
+            <p>РЕКОМЕНДУЕМ ПОЖИТЬ В НАСТОЯЩЕМ МОТЕЛЕ, ВСЕ КАК В КИНО!</p>
+          </section>
+          <section class="offer-food">
+            <h3>ЕДА</h3>
+            <p>ВСЕГДА ЗАКАЗЫВАЙТЕ ФИРМЕННЫЙ БУРГЕР, ВЫ НЕ РАЗОЧАРУЕТЕСЬ!</p>
+          </section>
+          <section class="offer-souvenir">
+            <h3>СУВЕНИРЫ</h3>
+            <p>НЕ ТОЛЬКО КИТАЙСКОГО, НО И МЕСТНОГО ПРОИЗВОДСТВА!</p>
+          </section>
+        </div>
+        <div class="main-realbridge">
+          <div class="main-secondimage">
+            <picture>
+              <img src="img/secondimage.jpg" width="800" height="256" alt="Каньон в Седоне">
+            </picture>
+          </div>
+          <section class="main-bridge">
+            <h3 class="bridge-devil">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h3>
+            <p class="bridge-n2">&ndash; №2 &ndash;</p>
+            <p class="bridge-go">ДА, ПО НЕМУ МОЖНО ПРОЙТИ! ЕСЛИ КОНЕЧНО ВЫ ОСМЕЛИТЕСЬ</p>
+          </section>
+        </div>
+        <div class="main-pluses">
+          <section class="main-area">
+            <h3>НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
+            <p>&ndash; №3 &ndash;</p>
+            <p>ВСЕ ДОСТОПРИМЕЧАТЕЛЬНОСТИ НАХОДЯТСЯ ОЧЕНЬ БЛИЗКО</p>
+          </section>
+          <section class="main-route">
+            <h3>КРАСИВАЯ ДОРОГА</h3>
+            <p>&ndash; №4 &ndash;</p>
+            <p>ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА СОВСЕМ НЕ СКУЧНО!</p>
+          </section>
+          <section class="main-tourist">
+            <h3>МАЛО ТУРИСТОВ</h3>
+            <p>&ndash; №5 &ndash;</p>
+            <p>БОЛЬШИНСТВО ЕДЕТ В ГРАНД КАНЬОН И ТОЛПИТСЯ ТАМ</p>
+          </section>
+        </div>
+        <section class="search">
+          <div class="search-hotel">
+            <h2 class="search-title">Заинтересовались?</h2>
+            <p class="search-text">УКАЖИТЕ ПРЕДПОЛАГАЕМЫЕ ДАТЫ ПОЕЗДКИ,</br>
+              И МЫ ПОКАЖЕМ ВАМ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ ГОСТИНИЦ В СЕДОНЕ</P>
+            <a class="search-hotel-button" href="#">Поиск гостиницы в Седоне</a>
+          </div>
+        </section>
+        <div class="search-data">
+          <section class="search-menu">
+            <h2 class="visually-hidden">Найти гостиницу</h2>
+            <form action="#" method="get" class="search-finder">
+              <p class="input-checking">
+                <label for="checking">Дата заезда:</label>
+                <input type="text" name="checking" id="checking" class="date-input" value="24 апреля 2017">
+                <button type="button" class="calender-picture">Открыть календарь
+                  <svg class="calendar" fill="#a9a9a9" tabindex="0" xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363
+                    0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362
+                    0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594
+                    15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
+                </button>
+              </p>
+              <p class="input-checkout">
+                <label for="checkout">Дата выезда:</label>
+                <input type="text" name="checkout" id="checkout" class="date-input" value="4 июля 2017">
+                <label for="checkout" class="search-calendar">Дата выезда</label>
+                <button type="button" class="calendar-container">Открыть календарь
+                  <svg class="calendar" fill="#a9a9a9" tabindex="0" xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363
+                    0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362
+                    0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594
+                    15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
+                </button>
+              </p>
+              <p class="numberviziters">
+                <label for="adults" class="adults">Взрослые:</label>
+                <input type="button" class="reduce" value="&#8722;">
+                <input type="text" name="adults" id="adults" value="2">
+                <input type="button" class="add" value="&#43;">
+              </p>
+              <p class="numberviziters">
+                <label for="children" class="childrens">Дети:</label>
+                <input type="button" class="reduce" value="&#8722;">
+                <input type="text" name="children" id="children" value="0">
+                <input type="button" class="add" value="&#43;">
+              </p>
+              <input class="button-form" type="submit" value="Найти">
+            </form>
+          </section>
+        </div>
+        <div class="map">
+          <picture class="map-image">
+            <img src="img/map.jpg" width="1200" height="756" alt="Карта окрестностей Седоны">
+          </picture>
+        </div>
       </main>
       <footer class="footer">
         <div class="footer-tags">
