--- a/catalog.html
+++ b/catalog.html
@@ -30,7 +30,7 @@
           <form action="#" method="get" class="filter-category">
             <div class="field-container field-infrastructure">
               <fieldset>
-                <legend>Инфраструктура</legend>
+                <legend>Инфраструктура:</legend>
                 <label>
                   <input type="checkbox" class="visually-hidden" name="pool" checked>
                   <span class="checkbox-picture"></span>
@@ -122,48 +122,75 @@
               </ul>
             </div>
           </div>
-          <div class="main-housing">
-            <section class="housing-item">
-              <h2 class="header-housing">AMARA RESORT &amp; SPA</h2>
+          <section class="housing-item">
+            <h2 class="visually-hidden">Гостиница AMARA RESORT &amp; SPA</h2>
+            <div class="housing-photo">
               <img src="img/amara.jpg" width="135" height="90" alt="Фотография гостиницы AMARA RESORT &amp; SPA">
-              <p class="nameandprice">
-                <span class="housing-name">Гостиница</span>
-                <span class="housing-price">ОТ 4000 Р.</span>
+            </div>
+            <div class="housing-description">
+              <h2 class="header-housing">AMARA RESORT &amp; SPA</h2>
+              <p class="housing-name">
+                Гостиница
+              </p>
+              <p class="housing-price">
+                От 4000 р.
               </p>
               <p>
-                <a class="button button-more" href="#">Подробнее</a>
-                <a class="button button-book" href="#">Забронировать</a>
-                <span class="rating">Рейтинг: 8,5</span>
+                <a href="#" class="button button-more" href="#">Подробнее</a>
+                <a href="#" class="button button-book" href="#">Забронировать</a>
               </p>
-            </section>
-            <section class="housing-item">
-              <h2 class="header-housing">DESERT QUAIL INN</h2>
+            </div>
+            <div class="housing-rating">
+              <span class="rating-star four-star">4 звезды</span>
+              <span class="rating-number">Рейтинг: 8,5</span>
+            </div>
+          </section>
+          <section class="housing-item">
+            <h2 class="visually-hidden">Мотель DESERT QUAIL INN</h2>
+            <div class="housing-photo">
               <img src="img/desert.jpg" width="135" height="90" alt="Фотография мотеля DESERT QUAIL INN">
-              <p class="nameandprice">
-                <span class="housing-name">Мотель</span>
-                <span class="housing-price">ОТ 3000 Р.</span>
+            </div>
+            <div class="housing-description">
+              <h2 class="header-housing">DESERT QUAIL INN</h2>
+              <p class="housing-name">
+                Мотель
+              </p>
+              <p class="housing-price">
+                От 3000 р.
               </p>
               <p>
-                <a class="button button-more" href="#">Подробнее</a>
-                <a class="button button-book" href="#">Забронировать</a>
-                <span class="rating">Рейтинг: 8,9</span>
+                <a href="#" class="button button-more" href="#">Подробнее</a>
+                <a href="#" class="button button-book" href="#">Забронировать</a>
               </p>
-            </section>
-            <section class="housing-item">
-              <h2 class="header-housing">VILLAS AT POCO DIABLO</h2>
+            </div>
+            <div class="housing-rating">
+              <span class="rating-star four-star">3 звезды</span>
+              <span class="rating-number">Рейтинг: 8,9</span>
+            </div>
+          </section>
+          <section class="housing-item">
+            <h2 class="visually-hidden">Аппартаменты VILLAS AT POCO DIABLO</h2>
+            <div class="housing-photo">
               <img src="img/villas.jpg" width="135" height="90" alt="Фотография аппартаментов VILLAS AT POCO DIABLO">
-              <p  class="nameandprice">
-                <span class="housing-name">Апартаменты</span>
-                <span class="housing-price">ОТ 2000 Р.</span>
+            </div>
+            <div class="housing-description">
+              <h2 class="header-housing">VILLAS AT POCO DIABLO/h2>
+              <p class="housing-name">
+                Аппартаменты
+              </p>
+              <p class="housing-price">
+                От 2000 р.
               </p>
               <p>
-                <a class="button button-more" href="#">Подробнее</a>
-                <a class="button button-book" href="#">Забронировать</a>
-                <span class="rating">Рейтинг: 9,2</span>
+                <a href="#" class="button button-more" href="#">Подробнее</a>
+                <a href="#" class="button button-book" href="#">Забронировать</a>
               </p>
-            </section>
-          </div>
-        </div>
+            </div>
+            <div class="housing-rating">
+              <span class="rating-star four-star">2 звезды</span>
+              <span class="rating-number">Рейтинг: 9,2</span>
+            </div>
+          </section>
       </main>
       <footer class="footer">
         <section class="footersection">
