Changes css catalog

--- a/catalog.html
+++ b/catalog.html
@@ -100,7 +100,7 @@
               <span>Найдено: 3</span>
             </div>
             <div class="column2">
-              <span>Сортировка</span>
+              <span>Сортировка:</span>
               <ul>
                 <li><a class="list-item-price">По цене</a></li>
                 <li><a href="#" class="list-item-type">По типу</a></li>
@@ -192,7 +192,7 @@
             </div>
           </section>
       </main>
-      <footer class="footer">
+      <footer class="footer-catalog">
         <section class="footersection">
           <h3 class="visually-hidden">Хештег посетите Седону</h3>
           <p class="visitsedona">#VISITSEDONA</p>
