Changes html & css

--- a/catalog.html
+++ b/catalog.html
@@ -128,14 +128,14 @@
               <img src="img/amara.jpg" width="135" height="90" alt="Фотография гостиницы AMARA RESORT &amp; SPA">
             </div>
             <div class="housing-description">
-              <h2 class="header-housing">AMARA RESORT &amp; SPA</h2>
+              <h2 class="header-housing"><a href="#">AMARA RESORT &amp; SPA</a></h2>
               <p class="housing-name">
                 Гостиница
               </p>
               <p class="housing-price">
                 От 4000 р.
               </p>
-              <p>
+              <p class="buttons">
                 <a href="#" class="button button-more" href="#">Подробнее</a>
                 <a href="#" class="button button-book" href="#">Забронировать</a>
               </p>
@@ -151,43 +151,43 @@
               <img src="img/desert.jpg" width="135" height="90" alt="Фотография мотеля DESERT QUAIL INN">
             </div>
             <div class="housing-description">
-              <h2 class="header-housing">DESERT QUAIL INN</h2>
+              <h2 class="header-housing"><a href="#">DESERT QUAIL INN</a></h2>
               <p class="housing-name">
                 Мотель
               </p>
               <p class="housing-price">
                 От 3000 р.
               </p>
-              <p>
+              <p class="buttons">
                 <a href="#" class="button button-more" href="#">Подробнее</a>
                 <a href="#" class="button button-book" href="#">Забронировать</a>
               </p>
             </div>
             <div class="housing-rating">
-              <span class="rating-star four-star">3 звезды</span>
+              <span class="rating-star three-star">3 звезды</span>
               <span class="rating-number">Рейтинг: 8,9</span>
             </div>
           </section>
           <section class="housing-item">
-            <h2 class="visually-hidden">Аппартаменты VILLAS AT POCO DIABLO</h2>
+            <h2 class="visually-hidden">Апартаменты VILLAS AT POCO DIABLO</h2>
             <div class="housing-photo">
               <img src="img/villas.jpg" width="135" height="90" alt="Фотография аппартаментов VILLAS AT POCO DIABLO">
             </div>
             <div class="housing-description">
-              <h2 class="header-housing">VILLAS AT POCO DIABLO/h2>
+              <h2 class="header-housing"><a href="#">VILLAS AT POCO DIABLO</a></h2>
               <p class="housing-name">
-                Аппартаменты
+                Апартаменты
               </p>
               <p class="housing-price">
                 От 2000 р.
               </p>
-              <p>
+              <p class="buttons">
                 <a href="#" class="button button-more" href="#">Подробнее</a>
                 <a href="#" class="button button-book" href="#">Забронировать</a>
               </p>
             </div>
             <div class="housing-rating">
-              <span class="rating-star four-star">2 звезды</span>
+              <span class="rating-star two-star">2 звезды</span>
               <span class="rating-number">Рейтинг: 9,2</span>
             </div>
           </section>
