Changes css catalog

--- a/catalog.html
+++ b/catalog.html
@@ -70,7 +70,7 @@
             </div>
             <div class="field-container field-praicing">
               <fieldset>
-                <legend>Стоимость в сутки (Р):<legend>
+                <legend>Стоимость в сутки (Р):</legend>
                 <div class="price-controls">
                   <label for="min-price">
                     От
@@ -102,9 +102,9 @@
             <div class="column2">
               <span>Сортировка:</span>
               <ul>
-                <li><a class="list-item-price">По цене</a></li>
-                <li><a href="#" class="list-item-type">По типу</a></li>
-                <li><a href="#" class="list-item-rating">По рейтингу</a></li>
+                <li><a class="column2-list-price">По цене</a></li>
+                <li><a href="#" class="column2-list">По типу</a></li>
+                <li><a href="#" class="column2-list">По рейтингу</a></li>
               </ul>
             </div>
             <div class="column3">
