--- a/catalog.html
+++ b/catalog.html
@@ -22,7 +22,6 @@
           </div>
         </nav>
       </header>
-
       <main class="main">
         <h1 class="visually-hidden">Жилье городка Седона</h1>
         <section class="filter">
@@ -88,7 +87,7 @@
                   <div class="range-runner range-runner-min"></div>
                   <div class="range-runner range-runner-max"></div>
                 </div>
-                <input href="#" method="get" type="submit" value="Показать">
+                <input type="submit" value="Показать">
               </fieldset>
             </div>
           </form>
@@ -122,6 +121,7 @@
               </ul>
             </div>
           </div>
+        </section>
           <section class="housing-item">
             <h2 class="visually-hidden">Гостиница AMARA RESORT &amp; SPA</h2>
             <div class="housing-photo">
@@ -136,8 +136,8 @@
                 От 4000 р.
               </p>
               <p class="buttons">
-                <a href="#" class="button button-more" href="#">Подробнее</a>
-                <a href="#" class="button button-book" href="#">Забронировать</a>
+                <a href="#" class="button button-more">Подробнее</a>
+                <a href="#" class="button button-book">Забронировать</a>
               </p>
             </div>
             <div class="housing-rating">
@@ -159,8 +159,8 @@
                 От 3000 р.
               </p>
               <p class="buttons">
-                <a href="#" class="button button-more" href="#">Подробнее</a>
-                <a href="#" class="button button-book" href="#">Забронировать</a>
+                <a href="#" class="button button-more">Подробнее</a>
+                <a href="#" class="button button-book">Забронировать</a>
               </p>
             </div>
             <div class="housing-rating">
@@ -182,8 +182,8 @@
                 От 2000 р.
               </p>
               <p class="buttons">
-                <a href="#" class="button button-more" href="#">Подробнее</a>
-                <a href="#" class="button button-book" href="#">Забронировать</a>
+                <a href="#" class="button button-more">Подробнее</a>
+                <a href="#" class="button button-book">Забронировать</a>
               </p>
             </div>
             <div class="housing-rating">
@@ -209,7 +209,7 @@
                   width="17"
                   height="15"
                   viewBox="0 0 17 15">
-                  <path fill="#FFF" d="M10.95.144c1.685-.496 2.984.27 3.577 1.179.673-.231 1.331-.481 2.011-.708a2.345 2.345 0 0 1-.857 1.768c.685.17 1.304-.491 1.304-.491-.169 1-1.006 1.788-1.563 2.024-.231 6.75-3.175 11.217-10.077 11.082h-.446c-.41 0-4.164-.46-4.898-1.887 2.271.196 3.893-.422 4.693-1.177-.96-.3-2.679-.477-2.979-2.95.349.106.564.228 1.19.119C1.705 8.247.374 7.53.448 5.33c.285.328 1.067.536 1.34.472C1.085 5.561-.182 2.442.894.85c1.818 1.854 3.735 3.606 7.152 3.773C8.254 2.33 9.183.793 10.95.144z"/>
+                  <path d="M10.95.144c1.685-.496 2.984.27 3.577 1.179.673-.231 1.331-.481 2.011-.708a2.345 2.345 0 0 1-.857 1.768c.685.17 1.304-.491 1.304-.491-.169 1-1.006 1.788-1.563 2.024-.231 6.75-3.175 11.217-10.077 11.082h-.446c-.41 0-4.164-.46-4.898-1.887 2.271.196 3.893-.422 4.693-1.177-.96-.3-2.679-.477-2.979-2.95.349.106.564.228 1.19.119C1.705 8.247.374 7.53.448 5.33c.285.328 1.067.536 1.34.472C1.085 5.561-.182 2.442.894.85c1.818 1.854 3.735 3.606 7.152 3.773C8.254 2.33 9.183.793 10.95.144z"/>
                 </svg>
               </a>
             </li>
@@ -221,7 +221,7 @@
                   width="12"
                   height="22"
                   viewBox="0 0 12 22">
-                  <path fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/>
+                  <path d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/>
                 </svg>
               </a>
             </li>
@@ -234,13 +234,14 @@
                   width="20"
                   height="16"
                   viewBox="0 0 20 16">
-                  <path fill="#FFF" d="M17 0H3C1.35 0 0 1.35 0 3v10c0 1.65 1.35 3 3 3h14c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zM6.027 11.998V4.002L15.014 8l-8.987 3.998z"/>
+                  <path d="M17 0H3C1.35 0 0 1.35 0 3v10c0 1.65 1.35 3 3 3h14c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zM6.027 11.998V4.002L15.014 8l-8.987 3.998z"/>
                 </svg>
               </a>
             </li>
           </ul>
         </section>
         <section class="footersection">
+          <h2 class="visually-hidden">Логотип HTML Academy</h2>
           <a href="https://htmlacademy.ru/intensive/htmlcss" class="htmlacademy-referal">WEBSITE BY
             <svg class="svghtmlacademy" style="width:115px;height:41px;" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108.08 36.85">
               <title>logo-htmlacademy-small1</title>
