--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
         <section class="search">
           <div class="search-hotel">
             <h2 class="search-title">Заинтересовались?</h2>
-            <p class="search-text">УКАЖИТЕ ПРЕДПОЛАГАЕМЫЕ ДАТЫ ПОЕЗДКИ,</br>
-              И МЫ ПОКАЖЕМ ВАМ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ ГОСТИНИЦ В СЕДОНЕ</P>
+            <p class="search-text">УКАЖИТЕ ПРЕДПОЛАГАЕМЫЕ ДАТЫ ПОЕЗДКИ,<br>И МЫ ПОКАЖЕМ ВАМ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ ГОСТИНИЦ В СЕДОНЕ</P>
             <a class="search-hotel-button" href="#">Поиск гостиницы в Седоне</a>
           </div>
         </section>
@@ -155,15 +154,48 @@
         <section class="footersection footer-social">
           <h3 class="visually-hidden">Социальные сети</h3>
           <ul class="social-list">
-            <li class="socialbutton social-twitter"><a href="www.twitter.com">
-            </a></li>
-            <li class="socialbutton social-facebook"><a href="www.facebook.com">
-            </a></li>
-            <li class="socialbutton social-youtube"><a href="www.youtube.com">
-            </a></li>
+            <li class="socialbutton social-twitter">
+              <a class="social-web" href="www.twitter.com">
+                <svg
+                  class="tw"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  width="17"
+                  height="15"
+                  viewBox="0 0 17 15">
+                  <path d="M10.95.144c1.685-.496 2.984.27 3.577 1.179.673-.231 1.331-.481 2.011-.708a2.345 2.345 0 0 1-.857 1.768c.685.17 1.304-.491 1.304-.491-.169 1-1.006 1.788-1.563 2.024-.231 6.75-3.175 11.217-10.077 11.082h-.446c-.41 0-4.164-.46-4.898-1.887 2.271.196 3.893-.422 4.693-1.177-.96-.3-2.679-.477-2.979-2.95.349.106.564.228 1.19.119C1.705 8.247.374 7.53.448 5.33c.285.328 1.067.536 1.34.472C1.085 5.561-.182 2.442.894.85c1.818 1.854 3.735 3.606 7.152 3.773C8.254 2.33 9.183.793 10.95.144z"/>
+                </svg>
+              </a>
+            </li>
+            <li class="socialbutton social-facebook">
+              <a class="social-web" href="www.facebook.com">
+                <svg
+                  class="fb"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="12"
+                  height="22"
+                  viewBox="0 0 12 22">
+                  <path d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/>
+                </svg>
+              </a>
+            </li>
+            <li class="socialbutton social-youtube">
+              <a class="social-web" href="www.youtube.com">
+                <svg
+                  class="yt"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  width="20"
+                  height="16"
+                  viewBox="0 0 20 16">
+                  <path d="M17 0H3C1.35 0 0 1.35 0 3v10c0 1.65 1.35 3 3 3h14c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zM6.027 11.998V4.002L15.014 8l-8.987 3.998z"/>
+                </svg>
+              </a>
+            </li>
           </ul>
         </section>
         <section class="footersection">
+          <h2 class="visually-hidden">Логотип HTML Academy</h2>
           <a href="https://htmlacademy.ru/intensive/htmlcss" class="htmlacademy-referal">WEBSITE BY
             <svg class="svghtmlacademy" style="width:115px;height:41px;" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108.08 36.85">
               <title>logo-htmlacademy-small1</title>
