--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
       <header class="main-header">
         <nav class="header-menu">
           <ul class="menu-list">
-            <li><a href="index.html">ИНФОРМАЦИЯ</a></li>
+            <li><a href="#">ИНФОРМАЦИЯ</a></li>
             <li><a href="#">ФОТО И ВИДЕО</a></li>
             <li><a href="#">КАРТА ШТАТА</a></li>
             <li><a href="#">ГОСТИНИЦЫ</a></li>
@@ -26,7 +26,7 @@
         <h1 class="visually-hidden">Жилье городка Седона</h1>
         <section class="filter">
           <h2 class="visually-hidden">Фильтр-поиск жилья</h2>
-          <form action="#" method="get" class="filter-category">
+          <form action="action.php" method="get" class="filter-category">
             <div class="field-container field-infrastructure">
               <fieldset>
                 <legend>Инфраструктура:</legend>
@@ -87,7 +87,7 @@
                   <div class="range-runner range-runner-min"></div>
                   <div class="range-runner range-runner-max"></div>
                 </div>
-                <input type="submit" value="Показать">
+                <input type="submit" formaction="action.php" value="Показать">
               </fieldset>
             </div>
           </form>
@@ -201,7 +201,7 @@
           <h3 class="visually-hidden">Социальные сети</h3>
           <ul class="social-list">
             <li class="socialbutton social-twitter">
-              <a class="social-web" href="www.twitter.com">
+              <a class="social-web" href="http://www.twitter.com">
                 <svg
                   class="tw"
                   xmlns="http://www.w3.org/2000/svg"
@@ -214,7 +214,7 @@
               </a>
             </li>
             <li class="socialbutton social-facebook">
-              <a class="social-web" href="www.facebook.com">
+              <a class="social-web" href="http://www.facebook.com">
                 <svg
                   class="fb"
                   xmlns="http://www.w3.org/2000/svg"
@@ -226,7 +226,7 @@
               </a>
             </li>
             <li class="socialbutton social-youtube">
-              <a class="social-web" href="www.youtube.com">
+              <a class="social-web" href="http://www.youtube.com">
                 <svg
                   class="yt"
                   xmlns="http://www.w3.org/2000/svg"
