--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="search-data">
           <section class="search-menu popup">
             <h2 class="visually-hidden">Найти гостиницу</h2>
-            <form action="#" method="get" class="search-finder">
+            <form action="action.php" method="get" class="search-finder">
               <p class="input-data">
                 <label for="checking">Дата заезда:</label>
                 <input type="text" name="checking" id="checking" class="date-input" value="24 апреля 2017">
@@ -155,7 +155,7 @@
           <h3 class="visually-hidden">Социальные сети</h3>
           <ul class="social-list">
             <li class="socialbutton social-twitter">
-              <a class="social-web" href="www.twitter.com">
+              <a class="social-web" href="http://www.twitter.com">
                 <svg
                   class="tw"
                   xmlns="http://www.w3.org/2000/svg"
@@ -168,7 +168,7 @@
               </a>
             </li>
             <li class="socialbutton social-facebook">
-              <a class="social-web" href="www.facebook.com">
+              <a class="social-web" href="http://www.facebook.com">
                 <svg
                   class="fb"
                   xmlns="http://www.w3.org/2000/svg"
@@ -180,7 +180,7 @@
               </a>
             </li>
             <li class="socialbutton social-youtube">
-              <a class="social-web" href="www.youtube.com">
+              <a class="social-web" href="http://www.youtube.com">
                 <svg
                   class="yt"
                   xmlns="http://www.w3.org/2000/svg"
