--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/normalize-min.css">
     <link rel="stylesheet" href="css/style-min.css">
   </head>
   <body>
@@ -140,7 +140,7 @@
         </div>
         <section class="map">
           <h2 class="visually-hidden">Карта города Седоны</h2>
-          <iframe height="585" width="1200"
+          <iframe height="585" width="1200" frameborder="0"
               src="https://www.google.com/maps/embed/v1/search?q=Sedona%2C%20AZ%2C%20United%20States&key=AIzaSyCro3tHChMiGSgzL_9c4i_nZrinIxPum5o&zoom=9&center=34.869854,-111.761137"
               allowfullscreen>
           </iframe>
@@ -155,6 +155,7 @@
           <h3 class="visually-hidden">Социальные сети</h3>
           <ul class="social-list">
             <li class="socialbutton social-twitter">
+              <h4 class="visually-hidden">Социальная сеть Twitter</h4>
               <a class="social-web" href="http://www.twitter.com">
                 <svg
                   class="tw"
@@ -168,6 +169,7 @@
               </a>
             </li>
             <li class="socialbutton social-facebook">
+              <h4 class="visually-hidden">Социальная сеть Facebook</h4>
               <a class="social-web" href="http://www.facebook.com">
                 <svg
                   class="fb"
@@ -180,6 +182,7 @@
               </a>
             </li>
             <li class="socialbutton social-youtube">
+              <h4 class="visually-hidden">Социальная сеть Youtube</h4>
               <a class="social-web" href="http://www.youtube.com">
                 <svg
                   class="yt"
