--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Седона</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize-min.css">
-    <link rel="stylesheet" href="css/style-min.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <div class="wrapper">
@@ -140,7 +140,7 @@
         </div>
         <section class="map">
           <h2 class="visually-hidden">Карта города Седоны</h2>
-          <iframe height="585" width="1200" frameborder="0"
+          <iframe height="585" width="100%" frameborder="0"
               src="https://www.google.com/maps/embed/v1/search?q=Sedona%2C%20AZ%2C%20United%20States&key=AIzaSyCro3tHChMiGSgzL_9c4i_nZrinIxPum5o&zoom=9&center=34.869854,-111.761137"
               allowfullscreen>
           </iframe>
