Change Css & Html

--- a/catalog.html
+++ b/catalog.html
@@ -84,8 +84,8 @@
                   <div class="scale">
                     <div class="bar"></div>
                   </div>
-                  <div class="range-runner range-runner-min"></div>
-                  <div class="range-runner range-runner-max"></div>
+                  <div tabindex="0" class="range-runner range-runner-min"></div>
+                  <div tabindex="0" class="range-runner range-runner-max"></div>
                 </div>
                 <input type="submit" formaction="action.php" value="Показать">
               </fieldset>
