--- a/catalog.html
+++ b/catalog.html
@@ -201,6 +201,7 @@
           <h3 class="visually-hidden">Социальные сети</h3>
           <ul class="social-list">
             <li class="socialbutton social-twitter">
+              <h3 class="visually-hidden">Социальная сеть Twitter</h3>
               <a class="social-web" href="http://www.twitter.com">
                 <svg
                   class="tw"
@@ -214,6 +215,7 @@
               </a>
             </li>
             <li class="socialbutton social-facebook">
+              <h3 class="visually-hidden">Социальная сеть Facebook</h3>
               <a class="social-web" href="http://www.facebook.com">
                 <svg
                   class="fb"
@@ -226,6 +228,7 @@
               </a>
             </li>
             <li class="socialbutton social-youtube">
+              <h3 class="visually-hidden">Социальная сеть Youtube</h3>
               <a class="social-web" href="http://www.youtube.com">
                 <svg
                   class="yt"
